[package]
name = "bevy_prototype_simple_net"
version = "0.1.0"
edition = "2018"
authors = ["0x22fe <developer@0x22fe.com>"]
description = "Provides basic network functionality for the Bevy engine"
repository = "https://github.com/0x22fe/bevy_prototype_net"
license = "MIT"
keywords = ["bevy", "basic", "network", "tcp", "udp", "socket", "listener", "stream"]

[dependencies]
# bevy
bevy_app = "0.1.3"
bevy_ecs = "0.1.3"

# other
uuid = { version = "0.8", features = ["v4", "serde"] }

[[example]]
name = "net_client"
path = "examples/net_client.rs"

[[example]]
name = "net_server"
path = "examples/net_server.rs"
